--- a/app/public/report.html
+++ b/app/public/report.html
@@ -55,47 +55,51 @@
         <div id="stationNumber" class="tabcontent">
           <h3>Station Number Report</h3>
           <div id="stationNumberVue">
-            <select v-model="selected">
-              <option v-for="sN in staionNumber">A</option>
-            </select>
-            <span>Selected: {{ selected }}</span>
+            <table class="table table-striped" id='stationNumTable'>
+              <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Email</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr v-for="p in person" v-on:click="activeP = p">
+                  <th scope="row">{{ p.firstName }} {{ p.lastName }}</th>
+                  <td>{{ p.email }}</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Email</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr v-for="p in memberList" v-on:click="activeP = p">
-                <th scope="row">{{ p.firstName }} {{ p.lastName }}</th>
-                <td>{p.email}</td>
-              </tr>
-            </tbody>
-          </table>
         </div>
 
         <div id="radioNumber" class="tabcontent">
           <h3>Radio Number Report</h3>
-          <select v-model="selected">
-            <option v-for="sN in staionNumber">A</option>
-          </select>
-          <span>Selected: {{ selected }}</span>
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Email</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr v-for="p in memberList" v-on:click="activeP = p">
-                <th scope="row">{{ p.firstName }} {{ p.lastName }}</th>
-                <td>{p.email}</td>
-              </tr>
-            </tbody>
-          </table>
+          <div id="radioNumFilter">
+            <input type="checkbox" id="jack" value="Jack" v-model="checkedNames">
+            <label for="jack">Jack</label>
+            <input type="checkbox" id="john" value="John" v-model="checkedNames">
+            <label for="john">John</label>
+            <input type="checkbox" id="mike" value="Mike" v-model="checkedNames">
+            <label for="mike">Mike</label>
+            <br>
+            <span>Checked names: {{ checkedNames }}</span>
+          </div>
+          <div id="radioNumberVue">
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Email</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr v-for="p in person" v-on:click="activeP = p">
+                  <th scope="row">{{ p.firstName }} {{ p.lastName }}</th>
+                  <td>{{ p.email }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
 
         <div id="expCerts" class="tabcontent">
@@ -138,21 +142,16 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"></script>
-
-  <script src="js/moment.app.js"></script>
   <script src='js/tablesort.min.js'></script>
-  <script type="text/javascript" src="js/index.app.js"></script>
   <script>
     //tablesort plugin from https://github.com/tristen/tablesort
-    new Tablesort(document.getElementById('bookTable'));
+    new Tablesort(document.getElementById('stationNumTable'));
   </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
   <script src='js/report.js'></script>
   <script src='js/report.app.js'></script>
-
-
 </body>
 
 </html>
