--- a/app/public/member.html
+++ b/app/public/member.html
@@ -43,85 +43,89 @@
       <div class="container">
         <h2 id="bigheader">Welcome to the Member Page</h2>
       <p>In this page you can see our former and current member. You can click each member to see the current and expired certifications for that person.</p>
-      <br><br>
+
+      <br>
     <div class="row">
-      <div class="col-4">
-    <h4>List of Members</h4>
-    <p> Please select the name to see the basic information and certifications of the member.</p>
-    <table class="table table-striped" >
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Name</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr v-for="p in person" v-on:click="activeP = p">
-             <th scope="row">{{ p.personID  }}</th>
-             <td>{{ p.firstName }} {{ p.lastName }}</td>
-          </tr>
-         </tbody>
-      </table>
+      <div class="col-5">
 
-      <!-- Add Member Button-->
-      <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#exampleModal" >Add New Member</button>
+        <h4>List of Members</h4>
+        <p> Please select the name to see the basic information and certifications of the member.</p>
+        <table class="table" >
+            <thead class="thead-dark">
+              <tr>
+                <th>#</th>
+                <th>Name</th>
+                <th>Edit</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr v-for="p in person" v-on:click="activeP = p; getCert();">
+                 <th scope="row">{{ p.personID  }}</th>
+                 <td>{{ p.firstName }} {{ p.lastName }}</td>
+                 <th><button type="button" class="btn btn-link">View</button>
+                 <button type="button" v-on:click="editInfo(p)" class="btn btn-link">Edit</button>
+                 <button type="button"  v-on:click="deleteInfo(p)" class="btn btn-outline-danger">Delete</button></th>
+              </tr>
+             </tbody>
+          </table>
+          <!-- Add Member Button-->
+          <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#exampleModal" >Add New Member</button>
 
-      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <form method="post" v-on:submit.prevent="createMember">
-              <div class="modal-header">
-                <h5 class="modal-title">Add a New Member</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <form method="post" v-on:submit.prevent="createMember">
+                    <div class="modal-header">
+                      <h5 class="modal-title">Add a New Member</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <div class="form-row">
+                        <div class="form-group col-md-6">
+                          <label for="newFirstName">First Name</label>
+                          <input type="text" v-model="newMemberForm.firstName" class="form-control" id="FirstName" placeholder="Jane">
+                        </div>
+                        <div class="form-group col-md-6">
+                          <label for="newLastName">Last Name</label>
+                          <input type="text" v-model="newMemberForm.lastName" class="form-control" id="LastName" placeholder="Doe">
+                        </div>
+                      </div>
+                      <div class="form-row">
+                        <div class="form-group col-md-6">
+                          <label for="newPoition">Position</label>
+                          <input type="text" v-model="newMemberForm.position" class="form-control" id="Poition">
+                        </div>
+                        <div class="form-group col-md-6">
+                          <label for="newDepartment">Department</label>
+                          <input type="text" v-model="newMemberForm.department" class="form-control" id="Department">
+                        </div>
+                      </div>
+                      <div class="form-row">
+                        <div class="form-group col-md-6">
+                          <label for="newRadioNumber">Radio Number</label>
+                          <input type="text" v-model="newMemberForm.radioNumber" class="form-control" id="RadioNumber">
+                        </div>
+                        <div class="form-group col-md-6">
+                          <label for="newStationNumber">Station Number</label>
+                          <input type="text" v-model="newMemberForm.stationNumber" class="form-control" id="StationNumber">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="newEmail">Email address</label>
+                        <input type="email" v-model="newMemberForm.email" class="form-control" id="newPEmail" aria-describedby="emailHelp" placeholder="Enter email">
+                      </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary float-right">Create</button>
+                  </form>
+                </div>
               </div>
-              <div class="modal-body">
-                <div class="form-row">
-                  <div class="form-group col-md-6">
-                    <label for="newFirstName">First Name</label>
-                    <input type="text" v-model="newMemberForm.firstName" class="form-control" id="FirstName" placeholder="Jane">
-                  </div>
-                  <div class="form-group col-md-6">
-                    <label for="newLastName">Last Name</label>
-                    <input type="text" v-model="newMemberForm.lastName" class="form-control" id="LastName" placeholder="Doe">
-                  </div>
-                </div>
-                <div class="form-row">
-                <div class="form-group col-md-6">
-                  <label for="newPoition">Position</label>
-                  <input type="text" v-model="newMemberForm.position" class="form-control" id="Poition">
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="newDepartment">Department</label>
-                  <input type="text" v-model="newMemberForm.department" class="form-control" id="Department">
-                </div>
-              </div>
-              <div class="form-row">
-                <div class="form-group col-md-6">
-                  <label for="newRadioNumber">Radio Number</label>
-                  <input type="text" v-model="newMemberForm.radioNumber" class="form-control" id="RadioNumber">
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="newStationNumber">Station Number</label>
-                  <input type="text" v-model="newMemberForm.stationNumber" class="form-control" id="StationNumber">
-                </div>
-              </div>
-                <div class="form-group">
-                  <label for="newEmail">Email address</label>
-                  <input type="email" v-model="newMemberForm.email" class="form-control" id="newPEmail" aria-describedby="emailHelp" placeholder="Enter email">
-                </div>
-              <button type="submit" class="btn btn-primary float-right">Create</button>
             </div>
-            </form>
-        </div>
-      </div>
-    </div>
-
-
+            <!--Add member Form Ends-->
       </div>
 
-      <div class="col-8">
+      <div class="col-7">
         <h4> Details</h4>
         <h5>Basic Information</h5>
         <form>
@@ -167,52 +171,33 @@
               <input class="form-control" id="pName" v-bind:value="activeP.email" readonly>
             </div>
           </div>
-          <div v-for="c in certification" >>
-              <input class="form-control" id="pName" v-bind:value="activePcert" readonly>
+
+          <!-- <div v-for="c in certification" >>
+              <input class="form-control" id="pName" v-bind:value="activePID" readonly>
             </div>
-        </form>
+        </form> -->
 <br><br>
           <h5>Certification</h5>
-          <p> The followings are the certifications of {{activePName}}.</p>
-          <table class="table table-striped" >
-            <thead>
+          <p> The followings are the certifications of {{activePID}} {{activePName}}.</p>
+          <table class="table" >
+            <thead class="thead-light">
               <tr>
-                <th>#</th>
                 <th>Certification Name</th>
-                <th>Date Received</th>
-                <th>Date Expired</th>
+                <th>Certification Agency</th>
               </tr>
             </thead>
             <tbody>
-              <tr v-for="c in certification" >
-                 <th scope="row">{{ c.certName  }}</th>
-                 <td>{{ c.dateRecieved }}</td>
-                 <td>{{ c.dateExpired }}</td>
+              <tr v-for="c in certifications">
+                 <td scope="row">{{ c.certName }}</td>
+                 <td>{{ c.certAgency }}</td>
               </tr>
              </tbody>
           </table>
-            <!--<table class="table table-striped" >
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Certification Name</th>
-                  <th>Date Received</th>
-                  <th>Date Expired</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr v-for="c in certification" :key="i">
-                   <th scope="row">{{ c.certName  }}</th>
-                   <td>{{ c.dateRecieved }}</td>
-                   <td>{{ c.dateExpired }}</td>
-                </tr>
-               </tbody>
-            </table>-->
-      </div>
-    </div>
     </div>
   </div>
 </div>
+</div>
+</body>
   <!-- Main -->
 
   <!-- Footer -->
@@ -220,11 +205,11 @@
       <div class="row pad"></div>
       <div class="bottom">
         <center>
-        <p>Conditions of Use
-        <span>&#47;</span> Privacy Notice
-        <span>&#47;</span> Interest-Based Ads
-        <span>&#47;</span> © 2020, OCFR
-        </p>
+          <p>Conditions of Use
+          <span>&#47;</span> Privacy Notice
+          <span>&#47;</span> Interest-Based Ads
+          <span>&#47;</span> © 2020, OCFR
+          </p>
         </center>
       </div>
   </footer>
@@ -237,5 +222,5 @@
   <!--Local JS files we can delete table sort if not needed-->
   <script type="text/javascript" src="js/moment.app.js"></script>
 
-</body>
+
 </html>
