--- a/app/public/report.html
+++ b/app/public/report.html
@@ -65,7 +65,6 @@
               </thead>
               <tbody>
                 <tr v-for="p in person" v-on:click="activeP = p">
-
                   <th scope="row">{{ p.stationNumber }}</th>
                   <td> {{ p.firstName }} {{ p.lastName }} </td>
                   <td>{{ p.email }}</td>
@@ -97,7 +96,7 @@
                 </tr>
               </thead>
               <tbody>
-                  <tr v-for="p in person" v-on:click="activeP = p">
+                <tr v-for="p in person" v-on:click="activeP = p">
                 <th scope="row">{{ p.radioNumber }}</th>
                 <td> {{ p.firstName }} {{ p.lastName }} </td>
                 <td>{{ p.email }}</td>
@@ -159,6 +158,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
   <script src='js/report.js'></script>
   <script src='js/report.app.js'></script>
+  <script src='js/expcerts.app.js'></script>
 </body>
 
 </html>
