--- a/app/public/report.html
+++ b/app/public/report.html
@@ -79,7 +79,7 @@
               </tbody>
             </table>
           </div>
-          <input value="Export as CSV" type="button" onclick="$('#stationNumTable').table2CSV({header:['Station Number','Name','Email']})">
+        <button href="#" onclick="download_table_as_csv('stationNumTable');">Download as CSV</button>
         </div>
 
         <div id="radioNumber" class="tabcontent">
@@ -92,7 +92,7 @@
               </select>
           <br>
 
-            <table class="table table-striped">
+            <table class="table table-striped" id='radioNumTable'>
               <thead>
                 <tr>
                   <th> Radio Number </th>
@@ -109,8 +109,9 @@
               </tbody>
             </table>
           </div>
+        <button href="#" onclick="download_table_as_csv('radioNumTable');">Download as CSV</button>
         </div>
-      </div>
+
 
         <div id="expCerts" class="tabcontent">
           <h3>Expired Certifications Report</h3>
@@ -118,27 +119,28 @@
             <h4>Filter by Certification</h4>
             <select v-model="choose.certName">
                 <option value="" selected>All</option>
-                <option v-for='p in list'>{{ p.certName }}</option>
+                <option v-for='p in person'>{{ p.certName }}</option>
               </select>
           <br>
 
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Certification</th>
-                <th>Date Expired</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr v-for="p in list" v-if="choose.certName =='' || choose.certName == p.certName">
-                <th scope="row">{{ p.firstName }} {{ p.lastName }}</th>
-                <td>{{ p.certName }}</td>
+            <table class="table table-striped" id='expiredCertTable'>
+              <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Cert Name</th>
+                  <th>Date Expired</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr v-for="p in person" v-if="choose.certName =='' || choose.certName == p.certName">
+                <th scope="row">{{ p.firstName }} {{ p.lastName }} </th>
+                <td>{{ p.certName }} </td>
                 <td>{{ p.dateExpired }}</td>
-              </tr>
-            </tbody>
-          </table>
+                </tr>
+              </tbody>
+            </table>
         </div>
+        <button href="#" onclick="download_table_as_csv('expiredCertTable');">Download as CSV</button>
         </div>
       </div>
     </div>
@@ -173,7 +175,7 @@
   <script src='js/report.app.js'></script>
   <script src='js/expcerts.app.js'></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js" ></script>
-  <script type="text/javascript" src="js/html2CSV.js" ></script>
+  <script src="js/html2CSV.js"></script>
 </body>
 
 </html>
